--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,10 @@
 name: temp_mail_gen
 description: Unoffical wrapper to get emails from 1secmail api.
-version: 1.0.0
+version: 2.0.0
+repository: https://github.com/ArunPrakashG/temp_mail_gen
 
 environment:
-  sdk: '>=2.10.0 <3.0.0'
-  
+  sdk: ">=2.12.0 <3.0.0"
+
 dependencies:
   http: ^0.13.3
